Change jvm args for distribution and idea task